nuova versione con cambio traccia fermando la canzone

--- a/produttoreMusica/Base.lproj/Main.storyboard
+++ b/produttoreMusica/Base.lproj/Main.storyboard
@@ -55,7 +55,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l2M-oa-gju">
-                                <rect key="frame" x="64" y="245" width="295" height="302"/>
+                                <rect key="frame" x="-22" y="245" width="285" height="302"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title=""/>
@@ -64,23 +64,43 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FIQ-Zh-MzH">
-                                <rect key="frame" x="163" y="624" width="58" height="63"/>
+                                <rect key="frame" x="163" y="624" width="100" height="63"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="▶️">
-                                    <fontDescription key="titleFontDescription" type="italicSystem" pointSize="35"/>
+                                    <fontDescription key="titleFontDescription" type="italicSystem" pointSize="45"/>
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="play:" destination="BYZ-38-t0r" eventType="touchUpInside" id="TGq-KK-waI"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MhB-Pd-LwU">
-                                <rect key="frame" x="163" y="756" width="67" height="31"/>
+                                <rect key="frame" x="163" y="729" width="100" height="55"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="⏸️">
+                                    <fontDescription key="titleFontDescription" type="italicSystem" pointSize="45"/>
+                                </buttonConfiguration>
                                 <connections>
                                     <action selector="stop:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZT2-lU-Y4x"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="geY-vM-xcW">
+                                <rect key="frame" x="26" y="630" width="67" height="57"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title=""/>
+                                <connections>
+                                    <action selector="indietro:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zp9-Vy-c4V"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0TL-cX-5GF">
+                                <rect key="frame" x="327" y="630" width="67" height="57"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title=""/>
+                                <connections>
+                                    <action selector="avanti:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kIu-x6-UIX"/>
                                 </connections>
                             </button>
                         </subviews>
